# learning-opengl

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
dependencies/include/glad/: glad.h
dependencies/include/imgui/: imgui.h  imgui_impl_glfw.h  imgui_impl_opengl3.h
dependencies/lib/: glad.c
dependencies/lib/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
res/shaders/: fragment.frag  fragment.shader  lightCube.frag  vertex.shader  vertex.vert
src/: Camera.cpp  Cube.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  debugger.cpp  main.cpp  utils.cpp
src/includes/: Camera.hpp  Cube.hpp  IndexBuffer.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  utils.hpp
